group component implemented

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+html {
+  /* --box-border-radius: 25px; */
+  background: linear-gradient(#ff724a, #ebbc5f);
+  height: 100%;
+  width: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +17,36 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.gradiant_background {
+  background: linear-gradient(#ff724a, #ebbc5f);
+  height: 100vh;
+  width: 100vw;
+}
+
+.group {
+  background: white;
+  border-radius: var(--box-border-radius);
+  margin: 10px;
+}
+
+.group-container {
+  display: flex;
+  flex-direction: column;
+  background-color: grey;
+  margin: 20px;
+  border-radius: 10px;
+}
+
+.group-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.first {
+  display:flex;
+  justify-content: space-around;
+  padding: 10px;
 }
